# ACES.Metrics-Handler-main

./: .gitignore  LICENSE  README.md  metrics.info.md  pyproject.toml
config/docker/: .env  docker-compose.yaml
config/docker/jupyter/: Dockerfile
config/k8s/aces/metrics_catalogue/: deployment.yaml
config/k8s/aces/metrics_consumer/: deployment.yaml
config/k8s/sample_apps/wp3-alibaba-upmv0/: pv.yaml  (+2 more)
metrics_catalogue/: Dockerfile  README.md  pyproject.toml
metrics_catalogue/src/: api.py  settings.py
metrics_consumer/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
metrics_consumer/src/: consume_nats.py  settings.py
metrics_consumer/src/NATS/: client.py  utils.py
metrics_consumer/testing/: consume_nats.py  settings.py
metrics_consumer/testing/NATS/: client.py  demo_test.py  utils.py
metrics_consumer/testing/graph_base/: base_client.py  supply.py  test.py
metrics_consumer/testing/src/: consume.py
metrics_consumer/testing/src/Kafka/: client.py
metrics_consumer/testing/storage/: load_min.py
metrics_consumer/testing/storage/object/: client.py
metrics_consumer/testing/timescaledb/: client.py  init_table.py
retentionETLs/: README.md  load_data-deployment.yaml  manage_metrics_flow-deployment.yaml  run.sh
retentionETLs/flows/: base_etls.py  manage_metrics_flow.py  settings.py
retentionETLs/flows/.ipynb_checkpoints/: base_etls-checkpoint.py  manage_metrics_flow-checkpoint.py  temp-checkpoint.py
retentionETLs/prefect/: block.py  workpool.py
storage/: ex.py
storage/graph_base/: api_client.py  base_client.py  demand.py
(+5 files in other folders)
