[project]
name = "metrics-catalogue"
version = "0.1.0"
description = ""
authors = [
    {name = "Panagiotis Kapsalis",email = "kapsali29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "neo4j (>=5.27.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
