[tool.poetry]
name = "metrics-consumer"
version = "0.1.0"
description = ""
authors = ["Panagiotis Kapsalis <kapsali29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.8.0"
neo4j = "^5.27.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
